--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			opacity: 0;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20220727225428">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220728110016">
 
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -171,7 +171,7 @@
 							<div class="card-welcome__content">
 								<div class="card-welcome__man">
 									<div class="card-welcome__photo">
-										<picture><source srcset="img/welcome/Peter3.webp" type="image/webp"><img src="img/welcome/Peter3.png" alt="Peter"></picture>
+										<picture><source srcset="img/welcome/Peter.webp" type="image/webp"><img src="img/welcome/Peter.jpg" alt="Peter"></picture>
 									</div>
 									<div class="card-welcome__name">Peter Parker</div>
 								</div>
@@ -1248,7 +1248,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20220727225428"></script>
+	<script src="js/app.min.js?_v=20220728110016"></script>
 </body>
 
 </html>
